<resources>
    <string name="app_name">ToDoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="shown_by">Shown By</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>