<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_shownBy"
            android:title="@string/shown_by">
            <menu>
                <item
                    android:id="@+id/menu_linear"
                    android:title="@string/linear" />
                <item
                    android:id="@+id/menu_grid"
                    android:title="@string/grid" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>